--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ section img {
   transition: all 0.6s;
   outline-offset: 15px;
   box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
+  border-radius: 7px;
 }
 
 section img:hover {
@@ -39,17 +40,23 @@ section img:hover {
 .first-img {
   top: 85px;
   left: 115px;
+  animation: moveinUp 2s ease-out;
+  animation-fill-mode: backwards;
 }
 
 .second-img {
   left: 230px;
   top: 250px;
+  animation: moveinRight 2s ease-out;
+  animation-fill-mode: backwards;
 }
 
 .third-img {
   top: 310px;
   left: 10px;
   width: 250px;
+  animation: moveinBottom 2s ease-out;
+  animation-fill-mode: backwards;
 }
 
 @media (max-width: 25em) {
@@ -59,5 +66,53 @@ section img:hover {
 
   .third-img:hover {
     transform: translateX(30px);
+  }
+}
+
+@keyframes moveinUp {
+  0% {
+    opacity: 0;
+    transform: translateY(-200px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+/* @keyframes moveinLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-200px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+} */
+
+@keyframes moveinRight {
+  0% {
+    opacity: 0;
+    transform: translateX(200px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveinBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(200px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
   }
 }
