--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ section img {
   outline-offset: 15px;
   box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
   border-radius: 7px;
-  z-index: 10;
+  /* z-index: 10; */
 }
 
 section img:hover {
@@ -152,7 +152,7 @@ section img:hover {
 .emoji {
   font-size: 20px;
   position: absolute;
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 .em-1 {
