--- a/style.css
+++ b/style.css
@@ -152,11 +152,11 @@ section img:hover {
 .emoji {
   font-size: 20px;
   position: absolute;
-  /* z-index: -1; */
+  z-index: -1;
 }
 
 .em-1 {
-  top: 40%;
+  top: 200px;
   left: 50px;
 }
 
@@ -166,16 +166,16 @@ section img:hover {
 }
 
 .em-3 {
-  top: 30%;
+  top: 160px;
   right: 50px;
 }
 
 .em-4 {
-  bottom: 5%;
+  bottom: 140px;
   left: 130px;
 }
 
 .em-5 {
-  bottom: 15%;
+  bottom: 210px;
   right: 65px;
 }
